--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,14 @@
         android:theme="@style/Theme.ProduccionTablet"
         tools:targetApi="31">
         <activity
+            android:name=".Produccion_Activity"
+            android:exported="false" />
+        <activity
             android:name=".activitys.Tarea_Activity"
             android:exported="false" />
         <activity
             android:name=".activitys.Imprentas_Activity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".activitys.Login_Activity"
             android:exported="true">
