--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity
             android:name=".activitys.Tarea_Activity"
             android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:label="Tareas Disponibles" />
         <activity
             android:name=".activitys.Imprentas_Activity"
