--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,22 +24,24 @@
         <activity
             android:name=".activitys.Verificacion_Activity"
             android:exported="false"
+            android:windowSoftInputMode="stateHidden"
             android:label="Verificar Tarea" />
         <activity
             android:name=".activitys.Produccion_Activity"
             android:exported="false"
+            android:windowSoftInputMode="adjustResize"
             android:label="Produccion de Tarea" />
         <activity
             android:name=".activitys.Tarea_Activity"
             android:exported="false"
-            android:label="Tareas Disponibles"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:label="Tareas Disponibles" />
         <activity
             android:name=".activitys.Imprentas_Activity"
             android:exported="false"
             android:label="Seleccionar Imprentas" />
         <activity
             android:name=".activitys.Login_Activity"
+            android:windowSoftInputMode="stateHidden"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
