--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
         <activity
             android:name=".activitys.Verificacion_Activity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="false"
-            android:windowSoftInputMode="stateHidden" />
+            android:exported="false" />
         <activity
             android:name=".activitys.Produccion_Activity"
             android:exported="false"
