--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,5 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.android.volley:volley:1.2.1'
 
-
+    implementation 'commons-net:commons-net:3.6'
 }
