--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,17 @@
         android:theme="@style/Theme.ProduccionTablet"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
             android:name=".activitys.Bobina_Activity"
             android:exported="false" />
+
         <activity
             android:name=".dialogs.PdfActivity"
             android:exported="true"
-            android:theme="@style/Theme.ProduccionTablet.NoActionBar"></activity>
+            android:theme="@style/Theme.ProduccionTablet.NoActionBar">
+        </activity>
+
         <activity
             android:name=".activitys.Verificacion_Activity"
             android:exported="false"
@@ -52,6 +56,7 @@
             android:name=".activitys.Login_Activity"
             android:exported="true"
             android:label="Iniciar Sesion">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
