--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
 
         <activity
             android:name=".activitys.Bobina_Activity"
-            android:exported="false" />
+            android:exported="true">
+
+
+
+        </activity>
 
         <activity
             android:name=".dialogs.PdfActivity"
@@ -59,6 +63,7 @@
             android:name=".activitys.Login_Activity"
             android:exported="true"
             android:label="Iniciar Sesion">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
