19/04/2023 ajustes teclados y datamos de ventanas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,17 +24,13 @@
 
         <activity
             android:name=".activitys.Bobina_Activity"
-            android:exported="true">
-
-
-
-        </activity>
+            android:theme="@style/Theme.ProduccionTablet.NoActionBar"
+            android:exported="true" />
 
         <activity
             android:name=".dialogs.PdfActivity"
             android:exported="true"
             android:theme="@style/Theme.ProduccionTablet.NoActionBar">
-
 
 
         </activity>
