12/05/2023 ajustes cambios por enrique

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,12 @@
         <activity
             android:name=".activitys.Bobina_Activity"
             android:theme="@style/Theme.ProduccionTablet.NoActionBar"
-            android:exported="true" />
+            android:exported="true">
+
+
+
+        </activity>
+
 
         <activity
             android:name=".dialogs.PdfActivity"
@@ -59,12 +64,12 @@
             android:name=".activitys.Login_Activity"
             android:exported="true"
             android:label="Iniciar Sesion">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
 
         </activity>
 
