--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.codekolih.producciontablet"
         minSdk 22
         targetSdk 32
-        versionCode 16
-        versionName "16"
+        versionCode 17
+        versionName "17"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -44,5 +44,8 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'commons-net:commons-net:3.6'
+
+    implementation files('libs/tscsdk.jar')
+    implementation files('libs/DO_AndroidSDK_v2.5.0.aar')
 
 }
