--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -21,28 +19,24 @@
         android:theme="@style/Theme.ProduccionTablet"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activitys.ImprimirEtiquetas"
+            android:exported="false" />
+        <activity
+            android:name=".activitys.Configuracion"
+            android:label="Configurar Ip impresora"
+            android:exported="false" />
         <activity
             android:name=".activitys.Bobina_Activity"
-            android:exported="true">
-
-
-        </activity>
-
-
+            android:exported="true" />
         <activity
             android:name=".dialogs.PdfActivity"
             android:exported="true"
-            android:theme="@style/Theme.ProduccionTablet.NoActionBar">
-
-
-        </activity>
-
+            android:theme="@style/Theme.ProduccionTablet.NoActionBar" />
         <activity
             android:name=".activitys.Verificacion_Activity"
             android:exported="false"
-            android:theme="@style/Theme.ProduccionTablet.NoActionBar"/>
-            <!--android:windowSoftInputMode="adjustNothing" -->
+            android:theme="@style/Theme.ProduccionTablet.NoActionBar" /> <!-- android:windowSoftInputMode="adjustNothing" -->
         <activity
             android:name=".activitys.Produccion_Activity"
             android:exported="false"
@@ -62,7 +56,6 @@
             android:name=".activitys.Login_Activity"
             android:exported="true"
             android:label="Iniciar Sesion">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
